refactor: simplify API URL configuration to use single environment variable

--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
-# API URLs
-REACT_APP_API_URL_DEV=http://localhost:3001/api
-REACT_APP_API_URL_PROD=https://back-mercadotiendas.onrender.com/api
+# API URL
+REACT_APP_API_URL=http://localhost:3001/api
 
 # Firebase Configuration
 REACT_APP_FIREBASE_API_KEY=AIzaSyAnnHU4PX2HhtDItCGRsYrsOpCcETnKzUE
