--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,6 @@
   ],
   "buildCommand": "npm run build",
   "outputDirectory": "build",
-  "framework": "create-react-app",
+  "framework": null,
   "cleanUrls": true
 }
