--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "firebase": "^11.6.0",
+    "framer-motion": "^12.8.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.4.0",
