--- a/package.json
+++ b/package.json
@@ -50,5 +50,6 @@
   "devDependencies": {
     "@types/react-router-dom": "^5.3.3",
     "cross-env": "^7.0.3"
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
