--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
+    "axios": "^1.11.0",
     "firebase": "^11.6.0",
     "framer-motion": "^12.8.0",
     "react": "^19.1.0",
