--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "zustand": "^5.0.3"
   },
   "scripts": {
-    "start": "cross-env HTTPS=true react-scripts start",
+    "start": "cross-env HTTPS=false react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
