--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "axios": "^1.11.0",
+    "dotenv": "^17.2.1",
     "firebase": "^11.6.0",
     "framer-motion": "^12.8.0",
     "react": "^19.1.0",
